# learn_prisma_rust

./: Cargo.toml  README.md  docker-compose.yml
prisma/: schema.prisma
src/: main.rs  prisma.rs  routes.rs
