[package]
name = "learn_prisma_rust"
version = "0.1.0"
edition = "2021"
default-run = "learn_prisma_rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
dotenv = "0.15.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.2" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.2" }
serde = { version = "1.0", features = ["derive"] }
tokio = {features=["macros","rt-multi-thread"], version = "1.17.0"}
